Location Added in Home Page

--- a/app.json
+++ b/app.json
@@ -38,6 +38,12 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Allow Football_Turf to show local venues near you."
+        }
       ]
     ],
     "experiments": {
