--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -32,8 +33,8 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "lucide-react-native": "^0.562.0",
-    "moti": "^0.30.0",
+    "lucide-react-native": "^0.575.0",
+    "moment": "^2.30.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -42,9 +43,12 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.3",
     "react-native-web": "~0.21.0",
+    "react-native-web-hooks": "^3.0.2",
     "react-native-worklets": "0.5.1",
-    "tslib": "2.6.2",
+    "socket.io-client": "^4.8.3",
+    "tslib": "^2.8.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
